--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "file-type": "^20.0.0",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
-    "openai": "^4.77.0"
+    "openai": "^4.77.0",
+    "path": "^0.12.7",
+    "tesseract.js": "^6.0.0"
   }
 }
