--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "express": "^4.21.2",
     "file-type": "^20.0.0",
     "fs": "^0.0.1-security",
+    "gm": "^1.25.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "openai": "^4.77.0",
     "path": "^0.12.7",
+    "pdf2pic": "^3.1.3",
+    "sharp": "^0.33.5",
     "tesseract.js": "^6.0.0"
   }
 }
