--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "mysql2": "^3.12.0",
     "openai": "^4.77.0",
     "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.1.3",
     "sharp": "^0.33.5",
     "tesseract.js": "^6.0.0"
