--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "health-app-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "postinstall": "patch-package" 
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "openai": "^4.77.0",
+    "patch-package": "^8.0.0",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.1.3",
