--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+  "type": "module",
   "name": "health-app-server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "postinstall": "patch-package" 
+    "postinstall": "patch-package"
   },
   "keywords": [],
   "author": "",
@@ -20,11 +21,13 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "file-type": "^20.0.0",
+    "form-data": "^4.0.4",
     "fs": "^0.0.1-security",
     "gm": "^1.25.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.77.0",
     "patch-package": "^8.0.0",
     "path": "^0.12.7",
